{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "5495dffe-2b6c-459d-9324-5c0812a8a1f8",
            "actions": [
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "ad1c4d1b-24eb-40f0-b59e-2223e22e0825",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Boosting",
                    "type": "Button",
                    "id": "a7db6111-ba83-459c-9aa7-8f53b2968efc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotating",
                    "type": "Value",
                    "id": "01e649cf-a710-4a0e-9acf-27b599848274",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TurningLeft",
                    "type": "Value",
                    "id": "a4e44557-298d-4a9a-9fdb-ffa90d086f5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "TurningRight",
                    "type": "Value",
                    "id": "99b9c59b-17f4-4bef-81fe-bed4c95904b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "eb46999b-18a8-444b-9a4c-17961c070c78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RecenterCamera",
                    "type": "Button",
                    "id": "8cdafcbb-b0b0-4285-93ec-986307d583be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeCamera",
                    "type": "Button",
                    "id": "a4c4d6c5-5687-46d1-9c40-900d51baef97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "c866faec-c6db-48b9-b133-03bc9eb8478f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18fc9ffc-99d2-47d1-a614-1c10b0f54f84",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "573086a4-e77e-4ef6-9e0a-90395b357c1e",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "917455f6-cfc8-4eae-a0b3-d5d2310855df",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boosting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e272d792-dcbc-4b27-8194-3b3ab367ad87",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boosting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "4bea0cc8-a4c4-4eb0-b608-bac7bf5c4445",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotating",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a12fe902-b242-4bc4-8f15-98eaa94cf1c2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotating",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c532489e-9ea1-407b-b6b1-d318e9b59c85",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotating",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5a30ef55-5666-47f9-a71f-369aaf7d6da4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotating",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a1d78a4b-5dee-475f-a341-428def3fe7c8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotating",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dcb05c10-6812-4e39-a722-dd3862f8e743",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false,invertY=false)",
                    "groups": "",
                    "action": "Rotating",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "529fd553-27c0-42fb-960a-2b8d0db6854d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurningLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e16af93-e54e-4a45-95e9-c8b4cfd0f9c4",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurningLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d11f2aa9-3845-442f-94ab-3a54597401ca",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurningRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2a3e2da-f6d9-43fc-aac8-c2461ca39bbf",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurningRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61a72112-f046-4ffb-94b0-c738756e64bb",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a7c33b5-189d-4e94-a274-c8cc742651e1",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40739b26-3ae4-4f55-bf84-c83dca8482b6",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "RecenterCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7697696f-91f1-46fe-94d3-9182056bf966",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03eeee29-f0f0-4030-b5ee-eb1d1a8e248f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "853d3c25-f6cc-43ac-86fe-07d11b9cbe04",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}